<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListPreference
        android:defaultValue="@string/pref_language_english_value"
        android:entries="@array/pref_language_options"
        android:entryValues="@array/pref_language_values"
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_label" />

    <ListPreference
        android:defaultValue="@string/pref_sort_default_value"
        android:entries="@array/pref_sort_options"
        android:entryValues="@array/pref_sort_values"
        android:key="@string/pref_sort_order_key"
        android:title="@string/pref_sort_order_label" />
</PreferenceScreen>